security.tf
resource "aws_security_group" "management" {
  name        = "management_sg"
  description = "Allow inbound management traffic"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description      = "SSH from Jenkins Master"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["172.16.0.0/26"]
  }

  ingress {
    description      = "SSH from Jenkins Master"
    protocol         = "icmp"
    cidr_blocks      = ["172.16.0.0/26"]
  }

  tags = {
    Name = "Allow inbound  management traffic"
  }
}
